New Features and Important Changes in GammaLib 2.1.0

23 March 2023


1. Introduction
---------------
This document briefly summarises module by module the most important changes
made since the last release of GammaLib.


2. Public interface modifications
---------------------------------
The following classes have been added:
- GCOMDris
- GCOMHkd
- GCOMHkds

The following classes have been removed:
- none

The following classes have been renamed:
- none

The following methods have been added:
- GNdarray::index(int&)
- GIntegral::adaptive_gauss_kronrod()
- GSkyMap::operator==()
- GSkyMap::operator!=()
- GModelSpectralTable::nspectra()
- GModelSpectralTable::scale_energy()
- GModelSpectralTable::has_energy_scale()
- GResponseVectorCache::load()
- GResponseVectorCache::save()
- GResponseVectorCache::read()
- GCOMObservation(GCOMDri&, GCOMDri&, GCOMDri&, GCOMDri&, GCOMDri&)
- GCOMObservation::npred()
- GCOMObservation::drw()
- GCOMObservation::drwname()
- GCOMObservation::hkds()
- GCOMObservation::cachename()
- GCOMResponse::load_cache()
- GCOMResponse::save_cache()

The following methods have been removed:
- none

The following methods have been renamed:
- none

The arguments for the following methods have been changed:
- GApplication::log_value() methods now have optional unit parameters
- GCOMObservation() filename constructor now takes 5 filenames on
  input; was four filenames before
- GCOMObservation::load() method now takes 5 filenames on input; was 
  four filenames before
- GCOMObservation::load() method and GCOMObservation::GCOMObservation()
  constructor now takes also a vector for housekeeping file namess on
  input

The return value of the following methods has been changed:
- none


3. Configuration
-----------------
The distutils module was replace by the sysconfig and setuptools modules
in setup.py, with a fallback to distutils in case that either the
sysconfig or setuptools modules are not available. Furthermore, the