@@ -1,6 +1,6 @@
 New Features and Important Changes in GammaLib 2.1.0
 
-23 March 2023
+24 March 2023
 
 
 1. Introduction
@@ -33,6 +33,7 @@ The following methods have been added:
 - GResponseVectorCache::load()
 - GResponseVectorCache::save()
 - GResponseVectorCache::read()
+- GOptimizerLM::status_string()
 - GCOMObservation(GCOMDri&, GCOMDri&, GCOMDri&, GCOMDri&, GCOMDri&)
 - GCOMObservation::npred()
 - GCOMObservation::drw()
